added content to projects section

--- a/education/education.html
+++ b/education/education.html
@@ -67,7 +67,7 @@ console.log($("#"+section).attr("class"));
 					<li class="topnav"><a href="../projects/projects.html"
 						onclick="setGlobal('project', 'androids')"> Androids, Assemble! </a> </li>
 					<li class="topnav"><a href="../projects/projects.html"
-						onclick="setGlobal('project', 'primality')"> Primality Testing </a> </li>
+						onclick="setGlobal('project', 'mips')"> MIPS </a> </li>
 					<li class="topnav"><a href="../projects/projects.html"
 						onclick="setGlobal('project', 'geomAlg')"> Geometric Algebra </a> </li>
 				</ul>
