fixed broken links

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -127,7 +127,7 @@ arising from the physical sciences.</p>
 	possibly complete the factorization portion myself in the future. </p>
 <p> Assigned By: Dr. Anurag Agarwal </p>
 	 
-<a href="https://github.com/Abhalphiest/nt" class="github">Project Repository on GitHub</a>
+<a href="https://github.com/Abhalphiest/NT" class="github">Project Repository on GitHub</a>
 
 </div>
 
@@ -224,7 +224,7 @@ arising from the physical sciences.</p>
 		project in the future.
 		<br/> A download link for the logisim circuit simulator can be found <a href="#"> here</a>.
 	</p>
-	<a href="https://github.com/Abhalphiest/GeomAlgebra" class="github">Project Repository on GitHub</a>
+	<a href="https://github.com/Abhalphiest/GeometricAlgebra" class="github">Project Repository on GitHub</a>
 </div>
 </article>
 <?php include '../include/footer.php'; ?>
