fleshed out about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -83,8 +83,23 @@ $("#"+section).addClass("subcurr");
 <article>
 <h1> Welcome to my portfolio website!</h1>
 <p> My name is Margaret Dorsey, and I'm a second year dual major Game Design and Development and Computational Math student at the Rochester Institute of Technology.
-I am also following the Computer Science curriculum above and beyond my minor requirements, and completing a second minor in the Japanese language. More to come to this page ASAP! 
+I am also following the Computer Science curriculum above and beyond my minor requirements, and completing a second minor in the Japanese language. I also lead a club
+	called Crashtest games, dedicated to enabling people to test each other's games and improve together, and I help every year to put on the Interactive Games and Media
+	department megagame - designed and run by IGM students, faculty, and friends, lead by Professor Sean Boyle.
 </p>
+<p> Currently, I am studying abroad in Budapest, Hungary and cannot be contacted by phone - however, my contact information is available on my resume. Please use
+	the email there to contact me during this summer, but be aware that internet access here is somewhat limited and I may not reply for up to 2-3 days.
+	
+<h1> About this site </h1>
+	
+	<p> This site was originally developed for a web design and development class. For that project, I incorporated my own php to communicate with SMTP with
+	gmail's SMTP server, and also used php extensively on many pages to simplify html and create some interesting single page applications. However,
+	I hosted this version on heroku, which is unfortunately quite slow and cumbersome for how relatively light my portfolio is. As such, the site has
+	been refactored to instead use javascript for functionality, so it can be hosted instead on git pages, which only supports static html. 
+	A link to the repository for this site through all its iterations can be found <a href="https://github.com/Abhalphiest/portfolio">here</a>.</p>
+	<p> Please keep in mind that this portfolio is still a work in progress - I plan to reincorporate the japanese language version and add more functionality
+		as soon as I am able. </p>
+	
 </article>
 
 <footer>
