--- a/projects/projects.html
+++ b/projects/projects.html
@@ -213,7 +213,7 @@ arising from the physical sciences.</p>
 		the logisim circuitry program. A description of the 3-in-a-row assignment can be found <a href="#"> here </a>, and a download link for the logisim
 		circuit simulator can be found <a href="#"> here</a>.
 	</p>
-	<a href="#" class="github">Project Repository not yet posted on GitHub</a>
+	<a href="https://github.com/Abhalphiest/MIPS" class="github">Project Repository on GitHub</a>
 </div>
 <div id="geomAlg" class="project">
 	<h1> Geometric Algebra </h1>
