--- a/projects/projects.html
+++ b/projects/projects.html
@@ -104,8 +104,10 @@ console.log($("#"+section).attr("class"));
 
 <div id="wyvern" class="project">
 	<h1> Wyvern Engine </h1>
-	<p class="description" > A rendering and physics engine with a from scratch math library, implemented in C/C++ using openGL, GLEW, and GLFW.
-	Still in progress, see github readme for more information.
+	<p class="description" > A rendering engine implemented in C/C++ using openGL, GLEW, and GLFW.
+	Still in progress - I have not had as much time for my personal projects as I would like, and so I plan
+	to spend as much time as possible this semester incorporating more complex graphics, and then trying to use
+	what I learn in my systems classes to optimize.
 	</p>
 	<a href="https://github.com/Abhalphiest/engine" class="github">Project Repository on GitHub</a>
 </div>
@@ -209,9 +211,7 @@ arising from the physical sciences.</p>
 <div id="mips" class="project">
 	<h1> MIPS </h1>
 	<p class="description" > 
-		Wrote a 3-in-a-row puzzle solver in MIPS assembly language, using a simple stepback algorithm, and laid out a simple multicycle MIPS CPU in
-		the logisim circuitry program. A description of the 3-in-a-row assignment can be found <a href="#"> here </a>, and a download link for the logisim
-		circuit simulator can be found <a href="#"> here</a>.
+		Wrote a 3-in-a-row puzzle solver in MIPS assembly language, using a simple stepback algorithm.
 	</p>
 	<a href="https://github.com/Abhalphiest/MIPS" class="github">Project Repository on GitHub</a>
 </div>
