--- a/education/education.html
+++ b/education/education.html
@@ -72,19 +72,8 @@ console.log($("#"+section).attr("class"));
 						onclick="setGlobal('project', 'geomAlg')"> Geometric Algebra </a> </li>
 				</ul>
 			</li >
-			<li class ="topnav" id="1" name="edunav" >
+			<li  id="1" name="edunav" >
 				<a href="education.html" >Education</a>
-				<!-- sub navigation for math (invisible until hover)-->
-				<ul class="dropdown">
-					<li class="topnav"><a href="education.html"
-						onclick="setGlobal('education', 'compedu')"> Computing </a> </li>
-					<li class="topnav"><a href="education.html"
-						onclick="setGlobal('education', 'mathedu')"> Mathematics </a> </li>
-					<li class="topnav"><a href="education.html"
-						onclick="setGlobal('education', 'gameedu')"> Game Design </a> </li>
-					<li class="topnav"><a href="education.html"
-						onclick="setGlobal('education', 'coursework')"> Coursework </a> </li>
-				</ul>
 			</li>
 			
 			<li name="aboutnav">
@@ -96,219 +85,6 @@ console.log($("#"+section).attr("class"));
 </header>
 
 	
-<ul id="educationSubnav">
-<li onclick="sectionSwitch('#compedu')"> Computing</li>
-<li onclick="sectionSwitch('#mathedu')"> Mathematics </li>
-<li onclick="sectionSwitch('#gameedu')"> Game Design and Development </li>
-<li onclick="sectionSwitch('#coursework')"> Coursework </li>
-</ul>
-<article id="main"> <!-- for the entire body of content -->
-<script src="../javascript/section.js"></script>
-
-<div id="mathedu">	
-<h1> Mathematics </h1>
-	<section>
-		<h2>Linear Algebra</h2>
-		<h4>Courses Taken </h4>
-			<ul>
-				<li> Elementary Linear Algebra</li>
-				<li> Advanced Linear Algebra </li>
-			</ul>
-		<h4> Knowledge </h4>
-			<ul>
-				<li>Elementary Matrix Operations</li>
-				<li> Abstract Vector Spaces </li>
-				<li> Linear Transformations </li>
-				<li> Eigenvalues, Eigenvectors, and Diagonalization </li>
-				<li> Inner Product Spaces </li>
-				<li> Decompositions and Factorizations </li>
-			</ul>
-	</section>
-	
-	<section>
-		<h2>Differential Equations </h2>
-		<h4>Courses Taken </h4>
-			<ul>
-				<li>Ordinary Differential Equations</li>
-			</ul>
-		<h4> Knowledge </h4>
-			<ul>
-				<li> Separation of Variables </li>
-				<li> Slope Fields and Equilibria </li>
-				<li> Euler's Method and other Numerical Methods </li>
-				<li> First Order, Linear, and Nonlinear Systems </li>
-				<li> Forced, Unforced, Damped, and Resonant Harmonic Oscillation </li>
-				<li> Laplace Transforms </li>
-				<li> Partial Differential Equations and Method of Characteristics</li>
-			</ul>
-	</section>
-	
-	<section>
-		<h2>Pure Mathematics </h2>
-		<h4>Courses Taken </h4>
-			<ul>
-				<li>Discrete Math and Introduction to Proofs</li>
-				<li>Real Variables</li>
-			</ul>
-		<h4> Knowledge </h4>
-			<ul>
-				<li> Sets and Set Theory</li>
-				<li> Modular Arithmetic, Equivalence Relations, Equivalence Classes</li>
-				<li> Countability </li>
-				<li> Sequences, Series </li>
-				<li> Topology on the Real Number Line</li>
-				<li> Limits and Continuity </li>
-				<li> Proof Writing </li>
-				<li> Elementary Group Theory </li>
-			</ul>
-	</section>
-	
-	<section>
-		<h2>Calculus</h2>
-		<h4>Courses Taken </h4>
-			<ul>
-				<li>Calculus I</li>
-				<li>Calculus 2</li>
-				<li>Calculus 3 (Vector and Multivariable Calculus) </li>
-			</ul>
-		<h4> Knowledge </h4>
-			<ul>
-				<li> Limits, Derivatives, Integrals </li>
-				<li> Vector Calculus </li>
-				<li> Multivariable Calculus </li>
-				<li> Stokes' Theorem, Green's Theorem </li>
-				<li> Line integrals, Surface integrals </li>
-				<li> Polar and Spherical Coordinates </li>
-				<li> Some (very shallow) understanding of Calculus of Variations</li>
-			</ul>
-	</section>
-</div>
-
-<div id="compedu">
-	 <h1> Computing </h1>
-	<section>
-		<h2>Basic Data Structures and Algorithms</h2>
-		<h4>Courses Taken </h4>
-			<ul>
-				<li> Game Design and Algorithmic Problem Solving I</li>
-				<li> Game Design and Algorithmic Problem Solving II</li>
-			</ul>
-		<h4> Knowledge </h4>
-			<ul>
-				<li>Arrays, Lists, Trees, Linked Lists, Graphs, etc</li>
-				<li> Conditionals and Loops </li>
-				<li> Hash Tables and Dictionaries </li>
-				<li> Threading </li>
-				<li> The C# language and Visual Studio </li>
-				<li> Encapsulation, inheritance, polymorphism </li>
-				<li> Event handling</li>
-				<li> Basic networking (Sockets) </li>
-				<li> Exception catching </li>
-			</ul>
-	</section>
-	
-	<section>
-		<h2>Systems and Low Level Programming</h2>
-		<h4>Courses Taken </h4>
-			<ul>
-				<li>Mechanics of Programming </li>
-			</ul>
-		<h4>Knowledge </h4>
-			<ul>
-				<li> The C language </li>
-				<li> Memory Layout </li>
-				<li> The compilation and linking process </li>
-				<li> System Calls and basic Operating Systems </li>
-				<li> The Bash shell and the Unix environment </li>
-			</ul>
-	</section>
-	
-	<section>
-		<h2>Graphics Programming</h2>
-		<h4> Knowledge </h4>
-			<ul>
-				<li> OpenGL and C++ </li>
-				<li> Transformations </li>
-				<li> Cameras, Orthographic and Perspective Transformations</li>
-				<li> Mesh Construction and Rendering </li>
-				<li> Fragment and Vertex Shaders </li>
-				<li> The Rendering Pipeline </li>
-				<li> .obj loading </li>
-				<li> Texturing and UV Coordinates </li>
-			</ul>
-	</section>
-	
-	<section>
-		<h2>Physics Programming and Simulations</h2>
-		<h4>Courses Taken </h4>
-			<ul>
-				<li>Interactive Media Development</li>
-			</ul>
-		<h4> Knowledge </h4>
-			<ul>
-				<li> Basic autonomous algorithms - flee, seek, evade, pursue, obstacle avoidance, etc. </li>
-				<li> Basic kinematics - numerical integration of velocity and position from applied forces. </li>
-				<li> Collision Detection - AABB, bounding spheres, reoriented bounding boxes, separation-axis test </li>
-				<li> Flocking Algorithms </li>
-				<li> Spatial Partitioning </li>
-			</ul>
-	</section>
-	<section>
-		<h2>Web Development</h2>
-		<h4>Courses Taken</h4>
-			<ul>
-				<li>Web Design and Implementation </li>
-			</ul>
-		<h4> Knowledge </h4>
-		<ul>
-			<li>HTML5</li>
-			<li>CSS3</li>
-			<li>Javascript/JQuery</li>
-			<li>Server Side includes and some PHP</li>
-			<li>.htaccess</li>
-			<li>FTP/SFTP</li>
-			<li>Design principles and the web development cycle </li>
-		</ul>
-	</section>
-</div>
-
-<div id="gameedu">
-	<h1> Game Design </h1>
-	<section>
-		<h2>User Interface Design</h2>
-		<h4>Courses Taken </h4>
-			<ul>
-				<li> Interaction, Immersion, and the Media Interface</li>
-			</ul>
-		<h4> Knowledge </h4>
-			<ul>
-				<li> Visual and Functional Design Principles</li>
-				<li> Usability Testing </li>
-				<li> Context Analysis </li>
-				<li> UI Types and Design Patterns</li>
-				<li> Design Documentation</li>
-				<li> Interface Design Cycle</li>
-			</ul>
-	</section>
-	<section>
-		<h2>Asset Production</h2>
-		<h4>Courses Taken </h4>
-			<ul>
-				<li>2D Animation and Asset Production</li>
-				<li>3D Animation and Asset Production</li>
-			</ul>
-		<h4> Knowledge </h4>
-			<ul>
-				<li> Principles of Animation</li>
-				<li> 3D Modelling in Autodesk Maya  </li>
-				<li> Texturing and Materials </li>
-				<li> Rigging, Joint Weighting, and Animation </li>
-				<li> Sculpting in Autodesk Mudbox</li>
-				<li> Unity 3d </li>
-				<li> The Asset Production Cycle </li>
-			</ul>
-	</section>
-</div>
 <div id="coursework">
 	<h1>Coursework</h1>
 	<section>
