cleaning up education page

--- a/education/education.html
+++ b/education/education.html
@@ -7,23 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="../css/education.css" />
 	
-	
-	<script>
-	var setid;
-	window.onload = function()
-					{
-						document.getElementsByName("edunav")[0].setAttribute("id","current"); 
-						if(setid)
-						{
-							document.getElementByID(setid).setAttribute("class","subcurr");
-							document.getElementByID(setid).style.display ="block";
-						}
-					}  ;
-	</script>
 </head>
 <body>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!-- include jQuery -->
 <script src="../javascript/globals.js"></script>
 <script src="../javascript/section.js"></script>
 <script>
@@ -85,7 +71,7 @@ console.log($("#"+section).attr("class"));
 </header>
 
 	
-<div id="coursework">
+<div>
 	<h1>Coursework</h1>
 	<section>
 		<h2>Spring 2016</h2>
