cleaning up education page

--- a/education/education.html
+++ b/education/education.html
@@ -71,7 +71,7 @@ console.log($("#"+section).attr("class"));
 </header>
 
 	
-<div>
+<article>
 	<h1>Coursework</h1>
 	<section>
 		<h2>Spring 2016</h2>
@@ -154,7 +154,6 @@ console.log($("#"+section).attr("class"));
 				<li> AP English Language and Composition </li>
 			</ul>
 	</section>
-</div>
 </article>
 <?php include '../include/footer.php'; ?>
 </body>
