still hotfixing education page

--- a/education/education.html
+++ b/education/education.html
@@ -72,6 +72,9 @@ console.log($("#"+section).attr("class"));
 
 	
 <article>
+	<p> Course Descriptions for RIT courses can be found in <a href=""> this pdf file</a>. Simply searching
+	     for the course number should be enough - ex: CSCI-264. Inline course descriptions will be added aside
+		soon as possible. </p>
 	<section>
 		<h2>Fall 2016</h2>
 			<ul>
