--- a/aboutme.html
+++ b/aboutme.html
@@ -57,19 +57,8 @@ $("#"+section).addClass("subcurr");
 						onclick="setGlobal('project', 'geomAlg')"> Geometric Algebra </a> </li>
 				</ul>
 			</li >
-			<li class ="topnav" id="1" name="edunav" >
+			<li  id="1" name="edunav" >
 				<a href="education/education.html" >Education</a>
-				<!-- sub navigation for math (invisible until hover)-->
-				<ul class="dropdown">
-					<li class="topnav"><a href="education/education.html"
-						onclick="setGlobal('education', 'compedu')"> Computing </a> </li>
-					<li class="topnav"><a href="education/education.html"
-						onclick="setGlobal('education', 'mathedu')"> Mathematics </a> </li>
-					<li class="topnav"><a href="education/education.html"
-						onclick="setGlobal('education', 'gameedu')"> Game Design </a> </li>
-					<li class="topnav"><a href="education/education.html"
-						onclick="setGlobal('education', 'coursework')"> Coursework </a> </li>
-				</ul>
 			</li>
 			
 			<li name="aboutnav">
@@ -87,8 +76,6 @@ I am also following the Computer Science curriculum above and beyond my minor re
 	called Crashtest games, dedicated to enabling people to test each other's games and improve together, and I help every year to put on the Interactive Games and Media
 	department megagame - designed and run by IGM students, faculty, and friends, lead by Professor Sean Boyle.
 </p>
-<p> Currently, I am studying abroad in Budapest, Hungary and cannot be contacted by phone - however, my contact information is available on my resume. Please use
-	the email there to contact me during this summer, but be aware that internet access here is somewhat limited and I may not reply for up to 2-3 days.
 	
 <h1> About this site </h1>
 	
@@ -98,7 +85,7 @@ I am also following the Computer Science curriculum above and beyond my minor re
 	been refactored to instead use javascript for functionality, so it can be hosted instead on git pages, which only supports static html. 
 	A link to the repository for this site through all its iterations can be found <a href="https://github.com/Abhalphiest/portfolio">here</a>.</p>
 	<p> Please keep in mind that this portfolio is still a work in progress - I plan to reincorporate the japanese language version and add more functionality
-		as soon as I am able. </p>
+		as soon as I am able around my busy class schedule. </p>
 	
 </article>
 
