--- a/index.html
+++ b/index.html
@@ -54,19 +54,8 @@ $("#"+section).addClass("subcurr");
 						onclick="setGlobal('project', 'geomAlg')"> Geometric Algebra </a> </li>
 				</ul>
 			</li >
-			<li class ="topnav" id="1" name="edunav" >
+			<li id="1" name="edunav" >
 				<a href="education/education.html" >Education</a>
-				<!-- sub navigation for math (invisible until hover)-->
-				<ul class="dropdown">
-					<li class="topnav"><a href="education/education.html"
-						onclick="setGlobal('education', 'compedu')"> Computing </a> </li>
-					<li class="topnav"><a href="education/education.html"
-						onclick="setGlobal('education', 'mathedu')"> Mathematics </a> </li>
-					<li class="topnav"><a href="education/education.html"
-						onclick="setGlobal('education', 'gameedu')"> Game Design </a> </li>
-					<li class="topnav"><a href="education/education.html"
-						onclick="setGlobal('education', 'coursework')"> Coursework </a> </li>
-				</ul>
 			</li>
 			
 			<li name="aboutnav">
