--- a/projects/projects.html
+++ b/projects/projects.html
@@ -66,7 +66,7 @@ console.log($("#"+section).attr("class"));
 				</ul>
 			</li >
 			<li id="1" name="edunav" >
-				<a href="education/education.html" >Education</a>
+				<a href="../education/education.html" >Education</a>
 			</li>
 			
 			<li name="aboutnav">
