--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ $("#"+section).addClass("subcurr");
 			<li name="aboutnav">
 				<a href="aboutme.html" >About Me</a>
 			</li>
-			<li><a href="resume.html">Resume</a></li>
+			<li><a href="resume.pdf">Resume</a></li>
 		</ul>		
 	</nav>
 </header>
