--- a/projects/projects.html
+++ b/projects/projects.html
@@ -72,7 +72,7 @@ console.log($("#"+section).attr("class"));
 			<li name="aboutnav">
 				<a href="../aboutme.html" >About Me</a>
 			</li>
-			<li><a href="../resume.html">Resume</a></li>
+			<li><a href="../resume.pdf">Resume</a></li>
 		</ul>		
 	</nav>
 </header>
