updating more links

--- a/education/education.html
+++ b/education/education.html
@@ -72,7 +72,7 @@ console.log($("#"+section).attr("class"));
 
 	
 <article>
-	<p> Course Descriptions for RIT courses can be found in <a href="https://www.rit.edu/upub/pdfs/Undergrad_Course_Descriptions.pdf"> this pdf file</a>. Simply searching
+	<p> Course Descriptions for RIT courses can be found in <a target='_blank' href="https://www.rit.edu/upub/pdfs/Undergrad_Course_Descriptions.pdf"> this pdf file</a>. Simply searching
 	     for the course number should be enough - ex: CSCI-264. Inline course descriptions will be added aside
 		soon as possible. </p>
 	<section>
